--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
                         <h1>欢迎 !</h1>
                         <p>班级说说是我们交流的园地，欢迎注册！</p>
                         <p>
-                            <a class="btn btn-primary btn-lg" href="#" role="button">注册</a>
+                            <a class="btn btn-primary btn-lg" href="/register" role="button">注册</a>
                         </p>
                     </div>
                     <div class="col-sm-6">
@@ -51,7 +51,7 @@
 
 
         <script src="/js/jquery-3.2.1.js"></script>
-        <script src="/js/bootstrap"></script>
+        <script src="/js/bootstrap.js"></script>
 </body>
 
 </html>
