--- a/views/header.ejs
+++ b/views/header.ejs
@@ -21,7 +21,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">注册</a>
+                    <a href="/register">注册</a>
                 </li>
             </ul>
         </div>
