--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,19 +11,40 @@
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
-                <li>
-                    <a href="#">成员列表</a>
-                </li>
+                <% if(login) {%>
+                    <li>
+                        <a href="#">我的说说</a>
+                    </li>
+                    <% } %>
+                        <li>
+                            <a href="#">成员列表</a>
+                        </li>
             </ul>
-            <ul class="nav navbar-nav  navbar-right col-sm-offset--1">
-                <li>
-                    <a href="#">登录
-                    </a>
-                </li>
-                <li>
-                    <a href="/register">注册</a>
-                </li>
-            </ul>
+            <% if(login) {%>
+                <ul class="nav navbar-nav  navbar-right col-sm-offset--1">
+                    <li>
+                        <a href="#">欢迎你!
+                            <%= username %>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">设置个人资料</a>
+                    </li>
+                    <li>
+                        <a href="#">注销</a>
+                    </li>
+                </ul>
+                <% }else {%>
+                    <ul class="nav navbar-nav  navbar-right col-sm-offset--1">
+                        <li>
+                            <a href="/login">登录
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/register">注册</a>
+                        </li>
+                    </ul>
+                    <% } %>
         </div>
     </div>
 </nav>
