--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,40 +18,97 @@
     <!-- header -->
     <%- include('header.ejs') %>
         <!-- hello -->
-        <div class="jumbotron ">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <h1>欢迎 !</h1>
-                        <p>班级说说是我们交流的园地，欢迎注册！</p>
-                        <p>
-                            <a class="btn btn-primary btn-lg" href="/register" role="button">注册</a>
-                        </p>
+        <% if(login) { %>
+            <div class="jumbotron ">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <img src="/avatar/123123.jpg " alt="..." class="img-circle">
+                        </div>
+                        <div class="col-sm-4">
+                            <p>
+                                <%= username %>
+                            </p>
+                            <textarea name="content" id="content" cols="30" rows="7"></textarea>
+                            <br>
+                            <button type="submit" id='publish' class="btn btn-success">发表说说</button>
+                        </div>
                     </div>
-                    <div class="col-sm-6">
-                        <h3>已有帐号登录</h3>
-                        <form>
-                            <div class="form-group">
-                                <label for="username">用户名</label>
-                                    <input type="email" class="form-control" id="username" placeholder="用户名，可以是中文，不能和别人重复">
-                            </div>
-                            <div class="form-group">
-                                <label for="password">密码</label>
-                                <input type="password" class="form-control" id="password" placeholder="密码，至少6位">
-                            </div>
-                            <button type="submit" class="btn btn-default">登录</button>
-                        </form>
-                    </div>
-
                 </div>
-
-
             </div>
-        </div>
+            <div class="container content">
+                <!-- 分页 -->
+                <nav aria-label="Page navigation">
+                    <ul class="pagination">
+                        <li class="active">
+                            <a href="#">1</a>
+                        </li>
+                    </ul>
+                </nav>
+                <!-- 评论 -->
+                <div>
+                    <div col-sm-6>
+                        <h2>
+                            <img src="/avatar/123123.jpg " width="50px" class="img-circle">
+                            <%= username %> 评论:</h2>
+                        <p>dddddddddddddddd</p>
+                    </div>
+                </div>
+            </div>
+
+            <% }else {%>
+                <div class="jumbotron ">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h1>欢迎 !</h1>
+                                <p>班级说说是我们交流的园地，欢迎注册！</p>
+                                <p>
+                                    <a class="btn btn-primary btn-lg" href="/register" role="button">注册</a>
+                                </p>
+                            </div>
+                            <div class="col-sm-6">
+                                <h3>已有帐号登录</h3>
+                                <form>
+                                    <div class="form-group">
+                                        <label for="username">用户名</label>
+                                        <input type="email" class="form-control" id="username" placeholder="用户名，可以是中文，不能和别人重复">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="password">密码</label>
+                                        <input type="password" class="form-control" id="password" placeholder="密码，至少6位">
+                                    </div>
+                                    <button type="submit" class="btn btn-default">登录</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <% } %>
 
 
-        <script src="/js/jquery-3.2.1.js"></script>
-        <script src="/js/bootstrap.js"></script>
+                    <script src="/js/jquery-3.2.1.js"></script>
+                    <script src="/js/bootstrap.js"></script>
+                    <script>
+                        // 分页功能
+                        // 获取所有说说
+
+                        // 发表说说
+                        $('#publish').click(() => {
+                            // alert(3)
+                            let fields = {
+                                content: $('#content').val(),
+                                event: 'publish'
+                            };
+                            // console.log(fields)
+                            $.post('/publish', fields, (data) => {
+                                if (data == 'ok') {
+                                    alert('说说发表成功');
+                                }
+
+                            })
+                        })
+                    </script>
 </body>
 
 </html>
