--- a/views/header.ejs
+++ b/views/header.ejs
@@ -31,7 +31,7 @@
                         <a href="#">设置个人资料</a>
                     </li>
                     <li>
-                        <a href="#">注销</a>
+                        <a href="/logOut">注销</a>
                     </li>
                 </ul>
                 <% }else {%>
